edit 02-catalog & several edits

--- a/public/02-catalog-item.html
+++ b/public/02-catalog-item.html
@@ -437,7 +437,7 @@
 				</div>
 			</div>
 			<!-- start sProductItem-->
-			<section class="sProductItem section" id="sProductItem">
+			<div class="sProductItem section" id="sProductItem">
 				<div class="container">
 					<div class="row">
 						<div class="col-12 col-lg-6">
@@ -693,7 +693,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</div>
 			<!-- end sProductItem-->
 			<!-- start sProductDesc-->
 			<div class="sProductDesc" id="sProductDesc">
@@ -1961,7 +1961,7 @@
 						</div>
 						<!-- +e.input-wrap-->
 						<div class="form-wrap__input-wrap form-group">
-							<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="number" type="tel" placeholder="" step="any" required="required"/>
+							<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="" required="required"/>
 							</label>
 						</div>
 						<!-- +e.input-wrap-->
