--- a/public/12-favorits.html
+++ b/public/12-favorits.html
@@ -995,7 +995,7 @@
 						</div>
 						<!-- +e.input-wrap-->
 						<div class="form-wrap__input-wrap form-group">
-							<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="number" type="tel" placeholder="" step="any" required="required"/>
+							<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="" required="required"/>
 							</label>
 						</div>
 						<!-- +e.input-wrap-->
