--- a/public/index.html
+++ b/public/index.html
@@ -455,7 +455,7 @@
 			</div>
 			<!-- end headerBlock-->
 			<!-- start sMainCategories-->
-			<section class="sMainCategories section" id="sMainCategories">
+			<div class="sMainCategories section" id="sMainCategories">
 				<div class="container sliderAutoWidthWrap d-none d-md-block">
 					<div class="sliderAutoWidth sliderAutoWidth--js swiper">
 						<div class="swiper-wrapper">
@@ -550,7 +550,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</div>
 			<!-- end sMainCategories-->
 			<!-- start sHit-->
 			<section class="sHit section" id="sHit">
@@ -1694,7 +1694,7 @@
 			</section>
 			<!-- end sPopCategories-->
 			<!-- start sAllCategories-->
-			<section class="sAllCategories section" id="sAllCategories">
+			<div class="sAllCategories section" id="sAllCategories">
 				<div class="sAllCategories__container container sliderAutoWidthWrap">
 					<div class="row">
 						<div class="sAllCategories__col-slider col-12 col-sm-10">
@@ -1757,7 +1757,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</div>
 			<!-- end sAllCategories-->
 			<!-- start sHit-->
 			<section class="sHit section" id="sHit">
@@ -3141,7 +3141,7 @@
 						</div>
 						<!-- +e.input-wrap-->
 						<div class="form-wrap__input-wrap form-group">
-							<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="number" type="tel" placeholder="" step="any" required="required"/>
+							<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="" required="required"/>
 							</label>
 						</div>
 						<!-- +e.input-wrap-->
