--- a/public/10-order-done.html
+++ b/public/10-order-done.html
@@ -587,6 +587,7 @@
 		<script src="libs/swiper/swiper-bundle.min.js"></script>
 		<script src="libs/hc-sticky/hc-sticky.js"></script>
 		<script src="libs/ion-rangeslider/js/ion.rangeSlider.min.js"> </script>
+		<script src="libs/inputmask/inputmask.min.js"> </script>
 		<script src="js/common.js?v=0.0.1"></script>
 	</body>
 </html>
