--- a/public/10-basket.html
+++ b/public/10-basket.html
@@ -41,14 +41,14 @@
 									</div>
 								</div>
 								<div class="col-auto">
-									<button class="topLine__location">
+									<div class="topLine__location">
 										<svg class="icon icon-geo ">
 											<use xlink:href="img/svg/sprite.svg#geo"></use>
 										</svg>
 										<div class="topLine__location-text">
 											<p><span>Москва</span>Выбрать другой город</p>
 										</div>
-									</button>
+									</div>
 								</div>
 								<div class="col-auto">
 									<div class="topLine__to-call"><a href="tel:+74951208090">
@@ -508,7 +508,7 @@
 								</td>
 							</tr>
 						</tbody>
-						<thead class="table-dark">
+						<tfoot class="table-dark">
 							<tr>
 								<th class="text-end" colspan="3">Итого</th>
 								<th>2 шт.</th>
@@ -516,7 +516,7 @@
 								<th class="text-end">13 140 руб.</th>
 								<th> </th>
 							</tr>
-						</thead>
+						</tfoot>
 					</table>
 					<div class="sBasket__buttons">
 						<a class="sBasket__btn sBasket__btn--dark" href="#">Очистить корзину
