--- a/public/index.html
+++ b/public/index.html
@@ -41,14 +41,14 @@
 									</div>
 								</div>
 								<div class="col-auto">
-									<button class="topLine__location">
+									<div class="topLine__location">
 										<svg class="icon icon-geo ">
 											<use xlink:href="img/svg/sprite.svg#geo"></use>
 										</svg>
 										<div class="topLine__location-text">
 											<p><span>Москва</span>Выбрать другой город</p>
 										</div>
-									</button>
+									</div>
 								</div>
 								<div class="col-auto">
 									<div class="topLine__to-call"><a href="tel:+74951208090">
@@ -553,7 +553,7 @@
 			</section>
 			<!-- end sMainCategories-->
 			<!-- start sHit-->
-			<section class="sHit section" id="sHit">
+			<section class="sHit section">
 				<div class="container sliderAutoWidthWrap">
 					<div class="section-title">
 						<div class="row">
@@ -1085,7 +1085,7 @@
 			</section>
 			<!-- end sHit-->
 			<!-- start sHit-->
-			<section class="sHit section" id="sHit">
+			<section class="sHit section">
 				<div class="container sliderAutoWidthWrap">
 					<div class="section-title">
 						<div class="row">
@@ -1760,7 +1760,7 @@
 			</section>
 			<!-- end sAllCategories-->
 			<!-- start sHit-->
-			<section class="sHit section" id="sHit">
+			<section class="sHit section">
 				<div class="container sliderAutoWidthWrap">
 					<div class="section-title">
 						<div class="row">
@@ -2292,7 +2292,7 @@
 			</section>
 			<!-- end sHit-->
 			<!-- start sHit-->
-			<section class="sHit section" id="sHit">
+			<section class="sHit section">
 				<div class="container sliderAutoWidthWrap">
 					<div class="section-title">
 						<div class="row">
