--- a/public/07-service-center-6.html
+++ b/public/07-service-center-6.html
@@ -41,14 +41,14 @@
 									</div>
 								</div>
 								<div class="col-auto">
-									<button class="topLine__location">
+									<div class="topLine__location">
 										<svg class="icon icon-geo ">
 											<use xlink:href="img/svg/sprite.svg#geo"></use>
 										</svg>
 										<div class="topLine__location-text">
 											<p><span>Москва</span>Выбрать другой город</p>
 										</div>
-									</button>
+									</div>
 								</div>
 								<div class="col-auto">
 									<div class="topLine__to-call"><a href="tel:+74951208090">
