--- a/public/index.html
+++ b/public/index.html
@@ -2830,17 +2830,17 @@
 							<h2>Блог</h2></a>
 					</div>
 					<div class="row">
-						<div class="col-12 col-sm-4 col-lg-4">
+						<div class="col-12 col-sm-4 col-xl-4">
 							<div class="blog-item blog-item--lg">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-1.png" alt="" loading="lazy"/>
 								</a>
-								<a class="blog-item__caption" href="#">Уход за триммером для травы: правила и рекомендации
+								<a class="blog-item__caption" href="#">Уход за&nbsp;триммером для травы: правила и&nbsp;рекомендации
 								</a>
 								<div class="blog-item__date">09.02.2022
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-xl-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
 								</a>
@@ -2850,7 +2850,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-xl-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-3.png" alt="" loading="lazy"/>
 								</a>
@@ -2860,7 +2860,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-xl-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-4.png" alt="" loading="lazy"/>
 								</a>
@@ -2870,7 +2870,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-xl-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-5.png" alt="" loading="lazy"/>
 								</a>
