--- a/public/03-blog.html
+++ b/public/03-blog.html
@@ -431,7 +431,7 @@
 						</ol>
 					</nav>
 					<div class="row">
-						<div class="col-sm-6 col-md-4 col-lg-2">
+						<div class="col-6 col-md-4 col-xl-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
 								</a>
@@ -441,7 +441,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-6 col-md-4 col-lg-2">
+						<div class="col-6 col-md-4 col-xl-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-3.png" alt="" loading="lazy"/>
 								</a>
@@ -451,7 +451,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-6 col-md-4 col-lg-2">
+						<div class="col-6 col-md-4 col-xl-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-4.png" alt="" loading="lazy"/>
 								</a>
@@ -461,7 +461,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-6 col-md-4 col-lg-2">
+						<div class="col-6 col-md-4 col-xl-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-5.png" alt="" loading="lazy"/>
 								</a>
@@ -471,7 +471,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-6 col-md-4 col-lg-2">
+						<div class="col-6 col-md-4 col-xl-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
 								</a>
@@ -481,7 +481,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-6 col-md-4 col-lg-2">
+						<div class="col-6 col-md-4 col-xl-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-3.png" alt="" loading="lazy"/>
 								</a>
@@ -491,7 +491,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-6 col-md-4 col-lg-2">
+						<div class="col-6 col-md-4 col-xl-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-4.png" alt="" loading="lazy"/>
 								</a>
@@ -501,7 +501,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-6 col-md-4 col-lg-2">
+						<div class="col-6 col-md-4 col-xl-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-5.png" alt="" loading="lazy"/>
 								</a>
@@ -511,7 +511,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-6 col-md-4 col-lg-2">
+						<div class="col-6 col-md-4 col-xl-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
 								</a>
@@ -521,7 +521,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-6 col-md-4 col-lg-2">
+						<div class="col-6 col-md-4 col-xl-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-3.png" alt="" loading="lazy"/>
 								</a>
@@ -531,7 +531,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-6 col-md-4 col-lg-2">
+						<div class="col-6 col-md-4 col-xl-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-4.png" alt="" loading="lazy"/>
 								</a>
@@ -541,7 +541,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-6 col-md-4 col-lg-2">
+						<div class="col-6 col-md-4 col-xl-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-5.png" alt="" loading="lazy"/>
 								</a>
