--- a/public/10-basket.html
+++ b/public/10-basket.html
@@ -453,8 +453,10 @@
 								<td class="basket-item__title">
 									<a class="basket-item__name" href="#">Штыковая укороченная лопата FISKARS SolidTM 1026667
 									</a>
+									<div class="basket-item__number d-block d-sm-none" data-label="Артикул ">1026667
+									</div>
 								</td>
-								<td class="basket-item__number" data-label="Артикул">1026667
+								<td class="basket-item__number d-none d-sm-block" data-label="Артикул">1026667
 								</td>
 								<td class="basket-item__count" data-label="Количество">
 									<div class="addBlock">
@@ -483,8 +485,10 @@
 								<td class="basket-item__title">
 									<a class="basket-item__name" href="#">Аккумуляторная газонокосилка PATRIOT РТ 330 Li
 									</a>
+									<div class="basket-item__number d-block d-sm-none" data-label="Артикул ">512300330
+									</div>
 								</td>
-								<td class="basket-item__number" data-label="Артикул">512300330
+								<td class="basket-item__number d-none d-sm-block" data-label="Артикул">512300330
 								</td>
 								<td class="basket-item__count" data-label="Количество">
 									<div class="addBlock">
