--- a/public/02-catalog-item.html
+++ b/public/02-catalog-item.html
@@ -492,7 +492,7 @@
 									<div class="col-auto">
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -786,7 +786,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
@@ -839,7 +839,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
@@ -892,7 +892,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
@@ -945,7 +945,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
@@ -998,7 +998,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
@@ -1057,7 +1057,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
@@ -1116,7 +1116,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
@@ -1175,7 +1175,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
@@ -1234,7 +1234,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
@@ -1344,7 +1344,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1403,7 +1403,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1462,7 +1462,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1521,7 +1521,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1580,7 +1580,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1639,7 +1639,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1698,7 +1698,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1757,7 +1757,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1816,7 +1816,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
