--- a/public/02-catalog.html
+++ b/public/02-catalog.html
@@ -638,7 +638,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -709,7 +709,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -780,7 +780,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -851,7 +851,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -922,7 +922,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -993,7 +993,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -1064,7 +1064,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -1135,7 +1135,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -1206,7 +1206,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -1277,7 +1277,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -1348,7 +1348,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -1419,7 +1419,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -1490,7 +1490,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -1561,7 +1561,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -1632,7 +1632,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -1703,7 +1703,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -1774,7 +1774,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -1845,7 +1845,7 @@
 										</div>
 										<div class="rating-info">
 											<div class="rating-info__stars">
-												<svg class="icon icon-star ">
+												<svg class="icon icon-star  active">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
 												<svg class="icon icon-star ">
@@ -1977,7 +1977,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
@@ -2030,7 +2030,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
@@ -2083,7 +2083,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
@@ -2136,7 +2136,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
@@ -2189,7 +2189,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
@@ -2248,7 +2248,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
@@ -2307,7 +2307,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
@@ -2366,7 +2366,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
@@ -2425,7 +2425,7 @@
 													</div>
 													<div class="rating-info">
 														<div class="rating-info__stars">
-															<svg class="icon icon-star ">
+															<svg class="icon icon-star  active">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
 															<svg class="icon icon-star ">
