--- a/public/12-favorits.html
+++ b/public/12-favorits.html
@@ -452,7 +452,7 @@
 								</div>
 								<div class="rating-info">
 									<div class="rating-info__stars">
-										<svg class="icon icon-star ">
+										<svg class="icon icon-star  active">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg>
 										<svg class="icon icon-star ">
@@ -509,7 +509,7 @@
 								</div>
 								<div class="rating-info">
 									<div class="rating-info__stars">
-										<svg class="icon icon-star ">
+										<svg class="icon icon-star  active">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg>
 										<svg class="icon icon-star ">
@@ -566,7 +566,7 @@
 								</div>
 								<div class="rating-info">
 									<div class="rating-info__stars">
-										<svg class="icon icon-star ">
+										<svg class="icon icon-star  active">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg>
 										<svg class="icon icon-star ">
@@ -623,7 +623,7 @@
 								</div>
 								<div class="rating-info">
 									<div class="rating-info__stars">
-										<svg class="icon icon-star ">
+										<svg class="icon icon-star  active">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg>
 										<svg class="icon icon-star ">
@@ -680,7 +680,7 @@
 								</div>
 								<div class="rating-info">
 									<div class="rating-info__stars">
-										<svg class="icon icon-star ">
+										<svg class="icon icon-star  active">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg>
 										<svg class="icon icon-star ">
@@ -737,7 +737,7 @@
 								</div>
 								<div class="rating-info">
 									<div class="rating-info__stars">
-										<svg class="icon icon-star ">
+										<svg class="icon icon-star  active">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg>
 										<svg class="icon icon-star ">
@@ -794,7 +794,7 @@
 								</div>
 								<div class="rating-info">
 									<div class="rating-info__stars">
-										<svg class="icon icon-star ">
+										<svg class="icon icon-star  active">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg>
 										<svg class="icon icon-star ">
@@ -851,7 +851,7 @@
 								</div>
 								<div class="rating-info">
 									<div class="rating-info__stars">
-										<svg class="icon icon-star ">
+										<svg class="icon icon-star  active">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg>
 										<svg class="icon icon-star ">
