--- a/public/index.html
+++ b/public/index.html
@@ -435,12 +435,12 @@
 									<div class="swiper-slide"><a href="#"><img src="img/hero-slider-3.jpg"/></a></div>
 								</div>
 								<div class="hero-slider-button-prev">
-									<svg class="icon icon-hero-next ">
+									<svg class="icon icon-hero-next  hero-slider__icon">
 										<use xlink:href="img/svg/sprite.svg#hero-next"></use>
 									</svg>
 								</div>
 								<div class="hero-slider-button-next">
-									<svg class="icon icon-hero-next ">
+									<svg class="icon icon-hero-next  hero-slider__icon">
 										<use xlink:href="img/svg/sprite.svg#hero-next"></use>
 									</svg>
 								</div>
@@ -584,7 +584,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -637,7 +637,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -696,7 +696,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -749,7 +749,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -808,7 +808,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -861,7 +861,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -920,7 +920,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -973,7 +973,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1026,7 +1026,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1116,7 +1116,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1169,7 +1169,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1228,7 +1228,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1281,7 +1281,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1340,7 +1340,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1393,7 +1393,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1452,7 +1452,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1505,7 +1505,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1558,7 +1558,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1791,7 +1791,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1844,7 +1844,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1903,7 +1903,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -1956,7 +1956,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -2015,7 +2015,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -2068,7 +2068,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -2127,7 +2127,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -2180,7 +2180,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -2233,7 +2233,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -2323,7 +2323,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -2376,7 +2376,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -2435,7 +2435,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -2488,7 +2488,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -2547,7 +2547,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -2600,7 +2600,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -2659,7 +2659,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -2712,7 +2712,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
@@ -2765,7 +2765,7 @@
 									</div>
 									<div class="rating-info">
 										<div class="rating-info__stars">
-											<svg class="icon icon-star ">
+											<svg class="icon icon-star  active">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
 											<svg class="icon icon-star ">
