--- a/public/10-basket.html
+++ b/public/10-basket.html
@@ -566,39 +566,41 @@
 							<p>E-mail: <a href="mailto:info@tehnosadov.ru">info@tehnosadov.ru</a></p>
 						</div>
 					</div>
-					<div class="footer__bottom row">
-						<div class="col">
-							<div class="footer__title">Товары для дома и&nbsp;сада &laquo;Техносадов&raquo; <sup class="reg">&reg;</sup> 2018-2022
+					<div class="footer__bottom">
+						<div class="row">
+							<div class="col">
+								<div class="footer__title">Товары для дома и&nbsp;сада &laquo;Техносадов&raquo; <sup class="reg">&reg;</sup> 2018-2022
+								</div>
+								<p>Сайт носит информационный характер и&nbsp;не&nbsp;является публичной офертой, определяемой положениями ч.2&nbsp;ст.&nbsp;437&nbsp;ГК РФ. Внешний вид, цвет и&nbsp;характеристики товаров указаны ориентировочно, могут не&nbsp;совпадать с&nbsp;обновленными моделями&nbsp;&mdash; уточняйте информацию у&nbsp;менеджеров при заказе.</p>
 							</div>
-							<p>Сайт носит информационный характер и&nbsp;не&nbsp;является публичной офертой, определяемой положениями ч.2&nbsp;ст.&nbsp;437&nbsp;ГК РФ. Внешний вид, цвет и&nbsp;характеристики товаров указаны ориентировочно, могут не&nbsp;совпадать с&nbsp;обновленными моделями&nbsp;&mdash; уточняйте информацию у&nbsp;менеджеров при заказе.</p>
-						</div>
-						<div class="col-12 col-lg-auto d-flex align-items-center justify-content-center">
-							<div class="soc">
-								<a class="soc__item" href="https://vk.com/tehnosadov" target="_blank">
-									<svg class="icon icon-vk ">
-										<use xlink:href="img/svg/sprite.svg#vk"></use>
-									</svg>
-								</a>
-								<a class="soc__item" href="https://youtube.com/channel/UC4Q_1trBaz7TReyeksjy7UA" target="_blank">
-									<svg class="icon icon-youtube ">
-										<use xlink:href="img/svg/sprite.svg#youtube"></use>
-									</svg>
-								</a>
-								<a class="soc__item" href="https://t.me/tehnosadov_bot" target="_blank">
-									<svg class="icon icon-telegram ">
-										<use xlink:href="img/svg/sprite.svg#telegram"></use>
-									</svg>
-								</a>
-								<a class="soc__item" href="https://api.whatsapp.com/message/BICUPZKPJ3TRH1" target="_blank">
-									<svg class="icon icon-whatsapp ">
-										<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
-									</svg>
-								</a>
-								<a class="soc__item" href="https://ok.ru/group/60953239879731" target="_blank">
-									<svg class="icon icon-ok ">
-										<use xlink:href="img/svg/sprite.svg#ok"></use>
-									</svg>
-								</a>
+							<div class="col-12 col-lg-auto d-flex align-items-center justify-content-center">
+								<div class="soc">
+									<a class="soc__item" href="https://vk.com/tehnosadov" target="_blank">
+										<svg class="icon icon-vk ">
+											<use xlink:href="img/svg/sprite.svg#vk"></use>
+										</svg>
+									</a>
+									<a class="soc__item" href="https://youtube.com/channel/UC4Q_1trBaz7TReyeksjy7UA" target="_blank">
+										<svg class="icon icon-youtube ">
+											<use xlink:href="img/svg/sprite.svg#youtube"></use>
+										</svg>
+									</a>
+									<a class="soc__item" href="https://t.me/tehnosadov_bot" target="_blank">
+										<svg class="icon icon-telegram ">
+											<use xlink:href="img/svg/sprite.svg#telegram"></use>
+										</svg>
+									</a>
+									<a class="soc__item" href="https://api.whatsapp.com/message/BICUPZKPJ3TRH1" target="_blank">
+										<svg class="icon icon-whatsapp ">
+											<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
+										</svg>
+									</a>
+									<a class="soc__item" href="https://ok.ru/group/60953239879731" target="_blank">
+										<svg class="icon icon-ok ">
+											<use xlink:href="img/svg/sprite.svg#ok"></use>
+										</svg>
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
